--- a/src/main/webapp/resources/css/step01.css
+++ b/src/main/webapp/resources/css/step01.css
@@ -81,7 +81,7 @@ em{font-style:normal;}
 
 /* container */
 .sub_header{position:absolute; left:0; width:100%; top:0; border-bottom:1px solid #e5e5e5; height:59px; background-color:#fff; z-index:5}
-.sub_header .logo{position:absolute; left:0; top:0px; height:60px; width:110px; background:url(../images/common/logo_sub_header.png) 0 50% no-repeat; overflow:hidden; text-indent:-9999px; font-size:0; line-height:0; opacity:0}
+.sub_header .logo{position:absolute; left:0; top:0px; height:60px; width:110px; overflow:hidden; text-indent:-9999px; font-size:0; line-height:0; opacity:0}
 .sub_header .top{position:absolute; right:0; top:0px; height:32px; padding-top:28px; font-family:font_sw; font-weight:bold; color:#bbbbbb; font-size:13px; opacity:0;}
 .sub_header .top:after{content:''; width:12px; height:15px; background:url(../images/common/icon_arr_top.png) 50% 0 no-repeat; display:block; position:absolute; left:0; width:100%; top:18px}
 .sub_header .sub_loc{text-align:center;}
