--- a/src/main/webapp/resources/css/ui.popup.css
+++ b/src/main/webapp/resources/css/ui.popup.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 html,body{background-color:transparent;}
-#popup_wrap{background-color:#ffc300; padding:0 8px 8px; border-radius:30px; overflow:hidden;}
+#popup_wrap{background-color:#ffc300; padding:0 8px 8px; border-radius:50px; overflow:hidden; }
 #popup_wrap h1.title{font-size:30px; text-align:center; color:#292929; font-weight:300; letter-spacing:-0.045em; padding:35px 0 29px}
 #popup_wrap .popup_content{background-color:#fff; padding:0 22px; border-radius:0 0 30px 30px;}
 
@@ -76,7 +76,7 @@ html,body{background-color:transparent;}
 #popup_wrap_wh h1.title{font-size:30px; color:#009223; font-weight:300; text-align:center; letter-spacing:-0.05em;line-height: 30px;padding-bottom: 30px;position: relative; margin-bottom: 50px;}
 #popup_wrap_wh h1.title:after {content: ''; position: absolute;bottom: 0;left: 0;width: 100%;height: 5px;background-color: #009223}
 
-#popup_wrap .popup_content{border-radius:0;}
+#popup_wrap .popup_content{border-radius:0; height: 590px;}
 
 /* 팝업 2019 :: 회원가입여부 확인 결과 팝업 */
 #popup_wrap_wh .join_status_cont .popup_content .notify { position:relative; padding:40px 45px 36px; text-align:center; background:#f6f6f6;}
