--- a/src/main/webapp/resources/css/menu.css
+++ b/src/main/webapp/resources/css/menu.css
@@ -651,7 +651,7 @@ p {
 .menu_view_wrapper  .fresh3_wrapper .hd p{color:#292929; font-size:18px; margin-bottom:4px;}
 .menu_view_wrapper  .fresh3_wrapper .hd h3{font-family:font_sw; font-weight:bold; color:#ffc300; font-size:50px; letter-spacing:-0.02em; line-height:50px}
 .menu_view_wrapper  .fresh3_wrapper .hd h3 span{color:#009223;}
-.menu_view_wrapper  .fresh3_wrapper .content{margin-top:60px; margin-left: 175px;}
+.menu_view_wrapper  .fresh3_wrapper .content{margin-top:60px;}
 .menu_view_wrapper  .fresh3_wrapper .content ol{overflow:hidden;}
 .menu_view_wrapper  .fresh3_wrapper .content ol li{width:370px; height:390px; float:left; margin-left:30px; position:relative;}
 .menu_view_wrapper  .fresh3_wrapper .content ol li:first-child{margin-left:0}
