--- a/src/main/webapp/resources/css/choice_option.css
+++ b/src/main/webapp/resources/css/choice_option.css
@@ -155,3 +155,9 @@ div>.th_name_step03{
 	border-radius: 8px;
 	margin: 15px 0;
 }
+
+#select_set > strong{
+	font-size: 30px;
+	font-weight: 700;
+	color: #fff;
+}
